--- a/datacenter-project/#src/review.html
+++ b/datacenter-project/#src/review.html
@@ -12,85 +12,116 @@
 </head>
 
 <body>
-    <div class="wrapper page-wrapper">
-        @@include('./components/layout/_header.html')
-        <main class="main">
-            <section class="review">
-                <div class="container review__container">
-                    <h2 class="review__title">Отзывы о нашем дата-центре</h2>
-                    <div class="review__content">
-                        <div class="review__card">
-                            <div class="review__card-inner">
-                                <p class="card-inner__title">Сергей Гайдуков</p>
-                                <p>Ген.директор ЧТПУП "Ланагор Трейд"</p>
-                                <div class="limiter">
-                                    Мы уже больше трех лет размещаем всю свою IT-ифраструктуру в датацентре компании “Датахата“.
+<div class="wrapper page-wrapper">
+    @@include('./components/layout/_header.html')
+    <main class="main">
+        <section class="review section-padding">
+            <div class="container review__container">
+                <h1 class="title">Отзывы о нашем дата-центре</h1>
+                <div class="review__content">
+                    <div class="review__card">
+                        <div class="review__card-inner">
+                            <p class="card-inner__title">Сергей Гайдуков</p>
+                            <p>Ген.директор ЧТПУП "Ланагор Трейд"</p>
+                            <div class="limiter">
+                                <p class="paragraph">
+                                    Мы уже больше трех лет размещаем всю свою IT-ифраструктуру в датацентре компании
+                                    “Датахата“.
                                     Достаточно часто в нашей работе возникает необходимость оперативно отреагировать на
-                                    различные проишествия. Спасибо персоналу датахаты за своевременную и зачастую превентивную
+                                    различные проишествия. Спасибо персоналу датахаты за своевременную и зачастую
+                                    превентивную
                                     помощь в решении различных ситуаций. Мы уже больше трех лет размещаем всю свою
-                                    IT-ифраструктуру в датацентре компании “Датахата“. Достаточно часто в нашей работе возникает
+                                    IT-ифраструктуру в датацентре компании “Датахата“. Достаточно часто в нашей работе
+                                    возникает
                                     необходимость оперативно отреагировать на различные проишествия.
-                                </div>
-                                <div class="read-more-button">Развернуть</div>
+                                </p>
                             </div>
+                            <div class="read-more-button">Развернуть</div>
                         </div>
-                        <div class="review__card">
-                            <div class="review__card-inner">
-                                <p class="card-inner__title">Vadim Titov</p>
-                                <p>CTO Magna Carta College</p>
-                                <div class="limiter">
-                                    Магна Карта Колледж расположен в Оксфорде и мы продвигаем наши инновационные образовательные
-                                    программы по всему миру. Для успешной и бесперебойной работы студентов с образовательными
-                                    материалами со всего мира, мы выбрали хостинг Датахата. Нас устраивает хорошая техническая
-                                    поддержка и комплексный подход к обслуживанию клиентов. Качество предоставляемых услуг и
-                                    приемлемая ценовая политика позволило остановить свой выбор на «Датахате» и мы об этом не
-                                    пожалели. Благодаря хорошей работе, инновационным технологиям и обновленному дизайну веб-сайт
-                                    Магна Карта Колледж Оксфорд на конкурсе Website of the year 2013 award стал лучшим сайтом 2013
+                    </div>
+                    <div class="review__card">
+                        <div class="review__card-inner">
+                            <p class="card-inner__title">Vadim Titov</p>
+                            <p>CTO Magna Carta College</p>
+                            <div class="limiter">
+                                <p class="paragraph">
+                                    Магна Карта Колледж расположен в Оксфорде и мы продвигаем наши инновационные
+                                    образовательные
+                                    программы по всему миру. Для успешной и бесперебойной работы студентов с
+                                    образовательными
+                                    материалами со всего мира, мы выбрали хостинг Датахата. Нас устраивает хорошая
+                                    техническая
+                                    поддержка и комплексный подход к обслуживанию клиентов. Качество предоставляемых
+                                    услуг и
+                                    приемлемая ценовая политика позволило остановить свой выбор на «Датахате» и мы об
+                                    этом
+                                    не
+                                    пожалели. Благодаря хорошей работе, инновационным технологиям и обновленному дизайну
+                                    веб-сайт
+                                    Магна Карта Колледж Оксфорд на конкурсе Website of the year 2013 award стал лучшим
+                                    сайтом 2013
                                     года в категории «Образовательный & социальный сайт»!
-                                </div>
-                                <div class="read-more-button">Развернуть</div>
+                                </p>
                             </div>
+                            <div class="read-more-button">Развернуть</div>
                         </div>
-                        <div class="review__card">
-                            <div class="review__card-inner">
-                                <p class="card-inner__title">Вячеслав Сенин</p>
-                                <p>ASSIST Belarus, директор</p>
-                                <div class="limiter">
-                                    Компания ASSIST пользуется услугами «Датахата» уже 1,5 года. Всё это время хостинг был на
-                                    высоте, а его команда неизменно показывала себя только с самой лучшей стороны. Профессионализм
-                                    сотрудников дата-центра внушает уверенность, а отзывчивость и быстрая реакция техподдержки не
-                                    раз выручали нас. Чувствуется, что для «Датахата» по-настоящему важен каждый клиент, и
-                                    внимательное отношение сотрудников хостинга даже к самой простой задаче делает компании честь.
+                    </div>
+                    <div class="review__card">
+                        <div class="review__card-inner">
+                            <p class="card-inner__title">Вячеслав Сенин</p>
+                            <p>ASSIST Belarus, директор</p>
+                            <div class="limiter">
+                                <p class="paragraph">
+                                    Компания ASSIST пользуется услугами «Датахата» уже 1,5 года. Всё это время хостинг
+                                    был
+                                    на
+                                    высоте, а его команда неизменно показывала себя только с самой лучшей стороны.
+                                    Профессионализм
+                                    сотрудников дата-центра внушает уверенность, а отзывчивость и быстрая реакция
+                                    техподдержки не
+                                    раз выручали нас. Чувствуется, что для «Датахата» по-настоящему важен каждый клиент,
+                                    и
+                                    внимательное отношение сотрудников хостинга даже к самой простой задаче делает
+                                    компании
+                                    честь.
                                     Желаем «Датахата» роста и процветания!
-                                </div>
-                                <div class="read-more-button">Развернуть</div>
+                                </p>
                             </div>
+                            <div class="read-more-button">Развернуть</div>
                         </div>
-                        <div class="review__card">
-                            <div class="review__card-inner" data-link="#def_4">
-                                <p class="card-inner__title">Александр Глущенко</p>
-                                <p>OOO “Музыкальный канал”</p>
-                                <div class="limiter">
+                    </div>
+                    <div class="review__card">
+                        <div class="review__card-inner" data-link="#def_4">
+                            <p class="card-inner__title">Александр Глущенко</p>
+                            <p>OOO “Музыкальный канал”</p>
+                            <div class="limiter">
+                                <p class="paragraph">
                                     Наш канал, начиная свое возвращение на рынок, нуждался в компании, которая смогла бы
-                                    предоставить все необходимые инструменты для обеспечения нашего вещания с минимальными
-                                    затратами. Компания “Датахата“ оказалась именно тем партнером, который смог адекватно предложить
-                                    нам набор инструментов для решения наших производственных задач и существенно сократить наши
+                                    предоставить все необходимые инструменты для обеспечения нашего вещания с
+                                    минимальными
+                                    затратами. Компания “Датахата“ оказалась именно тем партнером, который смог
+                                    адекватно
+                                    предложить
+                                    нам набор инструментов для решения наших производственных задач и существенно
+                                    сократить
+                                    наши
                                     издержки на IT.
-                                </div>
-                                <div class="read-more-button">Развернуть</div>
+                                </p>
                             </div>
+                            <div class="read-more-button">Развернуть</div>
                         </div>
                     </div>
                 </div>
-            </section>
-        </main>
-         @@include('./components/layout/_footer.html')
-          @@include('./components/layout/_footer-mob.html')
-    </div>
+            </div>
+        </section>
+    </main>
+    @@include('./components/layout/_footer.html')
+    @@include('./components/layout/_footer-mob.html')
+</div>
 
 
-    <script src="js/swiped-events.min.js"></script>
-    <script src="js/script.min.js"></script>
+<script src="js/swiped-events.min.js"></script>
+<script src="js/script.min.js"></script>
 </body>
 
 </html>
