--- a/datacenter-project/#src/advices.html
+++ b/datacenter-project/#src/advices.html
@@ -108,7 +108,7 @@
     @@include('./components/layout/_footer.html')
     @@include('./components/layout/_footer-mob.html')
 </div>
-<script src="js/swiped-events.min.js"></script>
+<!--<script src="js/swiped-events.min.js"></script>-->
 <script src="js/script.min.js"></script>
 </body>
 </html>
