--- a/datacenter-project/#src/review.html
+++ b/datacenter-project/#src/review.html
@@ -120,7 +120,7 @@
 </div>
 
 
-<script src="js/swiped-events.min.js"></script>
+<!--<script src="js/swiped-events.min.js"></script>-->
 <script src="js/script.min.js"></script>
 </body>
 
