refactor: remove prev form^ use form from onlyOffice

--- a/datacenter-project/#src/partners.html
+++ b/datacenter-project/#src/partners.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.min.css">
     <link rel="icon" href="img/logo/favicon.ico">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/css/intlTelInput.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/intlTelInput.min.js"></script>
 
     <title>Партнерская программа : Дата-центр Датахата</title>
 </head>
@@ -25,6 +27,7 @@
 
 
     <script src="js/script.min.js"></script>
+
 
 </body>
 
