--- a/datacenter-project/#src/partners.html
+++ b/datacenter-project/#src/partners.html
@@ -27,7 +27,7 @@
 
 
     <script src="js/script.min.js"></script>
-
+    <script src="https://www.google.com/recaptcha/api.js"></script>
 
 </body>
 
