--- a/#src/vps.html
+++ b/#src/vps.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-<div class="wrapper page-wrapper">
+<div class="wrapper page-wrapper vps-page">
     @@include('./components/layout/_header.html')
     <main class="main">
         <div class="vps container">
