--- a/#src/vps.html
+++ b/#src/vps.html
@@ -14,10 +14,13 @@
 <div class="wrapper page-wrapper vps-page">
     @@include('./components/layout/_header.html')
     <main class="main">
-        <div class="vps container">
+        <div class="vps">
            @@include('./components/vps/_promo.html')
-
            @@include('./components/vps/_calculator.html')
+           @@include('./components/vps/_advantages.html')
+           @@include('./components/vps/_company.html')
+           @@include('./components/vps/_faq.html')
+           @@include('./components/vps/_form.html')
         </div>
 
     </main>
