feat: add custom select

--- a/#src/vps.html
+++ b/#src/vps.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.min.css">
     <link rel="icon" href="img/logo/favicon.ico">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <title>Главная : Дата-центр Датахата</title>
 </head>
 
@@ -15,21 +16,57 @@
     @@include('./components/layout/_header.html')
     <main class="main">
         <div class="vps">
-           @@include('./components/vps/_promo.html')
-           @@include('./components/vps/_calculator.html')
-           @@include('./components/vps/_advantages.html')
-           @@include('./components/vps/_company.html')
-           @@include('./components/vps/_faq.html')
-           @@include('./components/vps/_form.html')
+            @@include('./components/vps/_promo.html')
+            @@include('./components/vps/_calculator.html')
+            @@include('./components/vps/_advantages.html')
+            @@include('./components/vps/_company.html')
+            @@include('./components/vps/_partners.html')
+            @@include('./components/vps/_faq.html')
+            @@include('./components/vps/_form.html')
         </div>
 
     </main>
     @@include('./components/layout/_footer.html')
 </div>
 
-
 <script src="js/script.min.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+
+<script type="text/javascript">
+	$(document).ready(function () {
+		$('.swiper-wrapper').slick({
+			autoplay: true,
+			lazyLoad: 'ondemand',
+			speed: 500,
+			infinite: true,
+			arrows: false,
+			slidesToShow: 8,
+			responsive: [
+				{
+					breakpoint: 1350,
+					settings: {
+						slidesToShow: 5,
+                        slidesToScroll: 2
+					}
+				},
+				{
+					breakpoint: 900,
+					settings: {
+						slidesToShow: 4,
+                        slidesToScroll: 2
+					}
+				}
+
+			]
+		});
+	});
+</script>
 
 </body>
 
 </html>
+
+
+
