feat: add tariff cards

--- a/#src/vps.html
+++ b/#src/vps.html
@@ -17,6 +17,7 @@
     <main class="main">
         <div class="vps">
             @@include('./components/vps/_promo.html')
+            @@include('./components/vps/_tariffs.html')
             @@include('./components/vps/_calculator.html')
             @@include('./components/vps/_advantages.html')
             @@include('./components/vps/_company.html')
